<resources>
    <string name="app_name">MyMusicApp</string>

    <!-- Category name for Now Playing [CHAR LIMIT=20] -->
    <string name="category_now_playing">Now Playing</string>

    <!-- Category name for the Artists [CHAR LIMIT=20] -->
    <string name="category_artists">Artists</string>

    <!-- Category name for the Genre [CHAR LIMIT=20] -->
    <string name="category_genre">Genre</string>

    <!-- Category name for the Payment [CHAR LIMIT=20] -->
    <string name="category_payment">Payment</string>

    <!-- Category name for the Main [CHAR LIMIT=20] -->
    <string name="category_main">Return to Home Page</string>

    <!-- Explanation for the Main Activity Page -->
    <string name="main_activity_summary">MAIN ACTIVITY:\nThis is the home screen. The user can access all options and features offered by the app.</string>

    <!-- Explanation for the Now Playing Page -->
    <string name="now_playing_summary">NOW PLAYING ACTIVITY:\nClasses needed - MediaPlayer and AudioManager. Displays screen of current song playing with toolbar to play, pause, rewind, and progress through the song.</string>
    <!-- Explanation for the Artists Page -->
    <string name="artists_summary">ARTISTS ACTIVITY:\nClass needed - ArrayList to list and sort. Users can upload songs here and make API calls to 3rd party sources for info, album listings, and upcoming performancess.</string>

    <!-- Explanation for the Genre Page -->
    <string name="genre_summary">GENRE ACTIVITY:\nClass needed - ArrayList to list and sort through all the genres.  An API call could be sent to a music streaming service (like Pandora) to obtain recommended artists.</string>

    <!-- Explanation for the Payment Page -->
    <string name="payment_summary">PAYMENT ACTIVITY:\nThis is where a user would make the payments necessary to enhance their experience with the music app - whether for purchasing new songs or subscribing to a music streaming service. I would try to incorporate a payment API like Stripe - https://stripe.com/docs/mobile/android. In my opinion, it would not be necessary to have any other Intents on this page besides returning to the home page.</string>

</resources>
