<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.MainActivity">

    <TextView
        android:id="@+id/now_playing"
        style="@style/CategoryStyle"
        android:background="@color/category_now_playing"
        android:text="@string/category_now_playing" />

    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists" />

    <TextView
        android:id="@+id/genre"
        style="@style/CategoryStyle"
        android:background="@color/category_genre"
        android:text="@string/category_genre" />

    <TextView
        android:id="@+id/payment"
        style="@style/CategoryStyle"
        android:background="@color/category_payment"
        android:text="@string/category_payment" />

</LinearLayout>
