<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.NowPlayingActivity">

    <TextView
        android:id="@+id/current_song"
        style="@style/MainActionStyle"
        android:background="@color/colorPrimary"
        android:text="@string/now_playing_summary" />

    <TextView
        android:id="@+id/artists"
        style="@style/SubCategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists" />

    <TextView
        android:id="@+id/genre"
        style="@style/SubCategoryStyle"
        android:background="@color/category_genre"
        android:text="@string/category_genre" />

    <TextView
        android:id="@+id/main_activity"
        style="@style/SubCategoryStyle"
        android:background="@color/category_main"
        android:text="@string/category_main" />

</LinearLayout>
