<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.GenreActivity">

    <TextView
        android:id="@+id/artist_text"
        style="@style/MainActionStyle"
        android:background="@color/colorPrimary"
        android:text="@string/genre_summary"/>

    <TextView
        android:id="@+id/artists"
        style="@style/SubCategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists" />

    <TextView
        android:id="@+id/now_playing"
        style="@style/SubCategoryStyle"
        android:background="@color/category_now_playing"
        android:text="@string/category_now_playing" />

    <TextView
        android:id="@+id/main_activity"
        style="@style/SubCategoryStyle"
        android:background="@color/category_main"
        android:text="@string/category_main" />

</LinearLayout>